implemented api methods exposed by service
